--- a/people.html
+++ b/people.html
@@ -133,7 +133,7 @@ and open the template in the editor.
 
  
     </head>
-    <body style="background-image: url(images/bg2.jpg);">
+    <body style="background-color: #838281;">
 
 
         <div class="menu animate">
