--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <div class="container">
                     <!--SECTION TITLE-->
                     <br>
-                    <div class="row">
+                    <div class="row"style="padding-right:300px;">
                         <div class="col-sm-12">
                             <div class="sectionInfo row">
 
